# darkfloor

./: .dockerignore  .env.example  .env.vercel.example  .gitignore  .gitmodules  .vercelignore  AGENTS.md  AI_TOOLING.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTEXT.md  Dockerfile  LICENSE.md  Makefile  README.md  TODO.md  docker-compose.yml  drizzle.config.ts  drizzle.env.ts  ecosystem.config.cjs  ecosystem.docker.cjs  eslint.config.js  findfile.ps1  next.config.js  package-lock.json  package.json  pgbouncer.status.txt  playwright.config.ts  pm2-setup.sh  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  rollup.config.mjs  tailwind.config.js  tree.txt  tsconfig.json  turbo.json  vercel.json  vitest.config.ts
.claude/: settings.local.json
.codex/: acceptance.md  prompt.md  tasks.md
.github/: copilot-instructions.md
apps/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/src/: main.rs
docs/: API_ROUTE_USE.md  API_USE.md  API_V2_SWAGGER.json  API_V2_SWAGGER.yaml  ARCHITECTURE.md  DEPLOYMENT.md  README.md  SETUP.md  SPOTIFY_PLAYLIST_IMPORT.md  TROUBLESHOOTING.md
electron/: README.md  main.cjs  preload.cjs  prepare-package.js  sign.js  tsconfig.json  types.d.ts  verify-build.js
scripts/: MIGRATION_README.md  check-deps.mjs  check-migration-progress.sh  check-package-boundaries.mjs  check-users.ts  copy-changelog.js  create-ca.ps1  create-ca.sh  create-keypair.cjs  create-signing-cert.ps1  create-test-cert.ps1  cron-auto-update.sh  db-sync.cjs  docker-entrypoint.sh  (+21 more)
(+649 files in other folders)
