[package]
name = "starchild"
version = "1.15.19"
description = "Starchild Music desktop app"
authors = ["Christian <soulwax@cock.li>"]
license = "GPL-3.0-only"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
url = "2"
